Actually fixed spacing
Actually fixed spacing

--- a/index.css
+++ b/index.css
@@ -5,5 +5,5 @@ ul {
 
 div {
     word-wrap : break-word;
-    width: 1000px
+    width: 850px
 }
